# httpx_requests

./: README.md  pyproject.toml
src/: get_token.py  main.py  send_data.py  send_timeack.py
