[tool.poetry]
name = "http-data"
version = "0.1.0"
description = ""
authors = ["Vitor11001 <josevitorleao1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
faker = "^26.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
